changes to make project testable locally (avoid push/pull all the time)

--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,6 @@ $RECYCLE.BIN/
 # except one (empty) file to have the folder in version control
 !*/uploads/.gitkeep
 !*/thumbnails/.gitkeep
+/.idea/.gitignore
+/.idea/modules.xml
+/.idea/vcs.xml
